--- a/web/src/index.css
+++ b/web/src/index.css
@@ -3,8 +3,7 @@
   font-size: 16px;
   line-height: 1.5;
   font-weight: 400;
-
-  background-color: rgb(47, 50, 90);
+  color: white;
 
   padding: 0;
   margin: 0;
