--- a/web/src/pages/CoursePage/Course.css
+++ b/web/src/pages/CoursePage/Course.css
@@ -1,22 +1,18 @@
-.bg-container{
-  display: flex;
-  height: 100vh;
-  width: 100vw;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(47, 50, 90);
-}
-
-.glass-layer{
+.glass-layer-course{
   display: grid;
   position: absolute;
   grid-template-columns: 1fr 1fr;
-/* Setting the size of the upper layer to 80% of the screen size*/
+  grid-template-rows: auto;
+  grid-template-areas: 
+    "title user"
+    "main main"
+  ;
+  row-gap: 2rem;
   height: 85vh;
   width: 92.5vw;
-  align-items: center;
+  /* align-items: center; */
   /* justify-content: space-between; */
-  padding: 60px;
+  padding: 5.2rem 4.7rem;
 
 
   /*the alpha value controls the transparency*/
@@ -31,49 +27,41 @@
   z-index: 4;
 }
 
-.mask{
-  height: 85vh;
-  width: 92.5vw;
-  border-radius: 1.3rem;
-  overflow: hidden;
-}
-
-.red-circle{
+.red-circle-course{
   background: #EA4335;
   display: inline-block;
   position: relative;
-  top: 46%;
-  left: -8%;
-  width: 20rem;
-  height: 20rem;
+  top: -20%;
+  left: 76%;
+  width: 25rem;
+  height: 25rem;
   border-radius: 50%;
 }
 
-.yellow-circle{
+.yellow-circle-course{
   background: #FBBC05;
   display: inline-block;
   position: relative;
-  top: 60%; 
-  left: -8%;
+  top: 20%; 
+  left: 47%;
   width: 18rem;
   height: 18rem;
   border-radius: 50%;
 }
 
-.app-name{
-  grid-column: 1 / 2;
+.header{
+  display: flex;
+  flex-direction: column;
+  grid-area:title;
 }
 
-.quote{
-  grid-column: 1 / 2;
+.user{
+  display: flex;
+  grid-area: user;
+  justify-content: end;
 }
 
-.api{
-grid-column: 2 / 3;
-grid-row: 2 / 3;
-}
-
-.agree-term{
-  grid-column: 2 / 3;
-  grid-row: 3 / 4;
+.course-container{
+  grid-area: main;
+  overflow-y: scroll;
 }
