--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,8 +1,7 @@
 * {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  font-weight: 400;
   color: white;
 
   padding: 0;
