--- a/web/src/pages/CoursePage/Course.css
+++ b/web/src/pages/CoursePage/Course.css
@@ -2,7 +2,7 @@
   display: grid;
   position: absolute;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto;
+  grid-template-rows: 1fr 3fr;
   grid-template-areas: 
     "title user"
     "main main"
@@ -52,13 +52,40 @@
 .header{
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   grid-area:title;
 }
 
-.user{
-  display: flex;
+.title{
+  font-size: 3rem;
+  font-weight: 500;
+}
+
+.user-tab{
+  display: grid;
+  grid-template-columns: 9fr 1fr 1fr;
   grid-area: user;
   justify-content: end;
+  column-gap: 10px;
+}
+
+.user-name{
+  font-size: 1.45rem;
+  font-weight: 500;
+  justify-self: end;
+}
+
+span{
+  font-size: 1.45rem;
+  font-weight: 500; 
+}
+
+.user-img{
+  background-color: aliceblue;
+  justify-self: center;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
 }
 
 .course-container{
