--- a/web/src/components/SearchBox/SearchBox.module.css
+++ b/web/src/components/SearchBox/SearchBox.module.css
@@ -1,20 +1,63 @@
-@media screen {
-  .box{
-    display: flex;
-    align-items: center;
-    width: 70%;
-    height: 30%;
-    background-color: #F2f2f2;
-    border-radius: 2.5rem;
-    padding-left: 1rem;
-  }
-  
-  .icon{
-    position: relative;
-  }
+.wrapper{
+  background-color: #F2f2f2;
+  border-radius: 2.5rem;
+  box-shadow: 0px 0px 5px #ddd;
+  width: 74%;
+  height: 2rem;
+  padding-left: 4%;
+  display: flex;
+  align-items: center;
+}
 
-  .placeholder{
-    color: rgba(160, 160, 160, 1);
-    padding-left: 1rem;
-  }
+.searchbox{
+  width: 100%;
+  height: 100%;
+  border: none;
+  background-color: #F2f2f2;
+  border-radius: 2.5rem;
+  padding-left: 1vw;
+}
+
+.icon{
+  position: relative;
+}
+
+.searchbox::-webkit-input-placeholder {
+  color: rgba(148, 148, 148, 1);
+}
+.searchbox::-moz-placeholder {
+  color: rgba(148, 148, 148, 1);
+}
+.searchbox:-ms-input-placeholder {
+  color: rgba(148, 148, 148, 1);
+}
+.searchbox:-moz-placeholder {
+  color: rgba(148, 148, 148, 1);
+}
+
+.wrapper:hover{
+  background-color: rgba(148, 148, 148, 1);
+}
+.wrapper:hover > .icon{
+  filter: brightness(0) invert(1);
+}
+.searchbox:hover{
+  background-color: #949494;
+}
+.searchbox:hover::-webkit-input-placeholder {
+  color: #F2f2f2;
+}
+.searchbox:hover::-moz-placeholder {
+  color: #F2f2f2;
+}
+.searchbox:hover:-ms-input-placeholder {
+  color: #F2f2f2;
+}
+.searchbox:hover:-moz-placeholder {
+  color: #F2f2f2;
+}
+
+.searchbox:focus{
+  outline: none;
+  color: black;
 }
