--- a/web/src/components/CourseCard/Coursecard.module.css
+++ b/web/src/components/CourseCard/Coursecard.module.css
@@ -1,3 +1,17 @@
-p{
-  font-size: 2rem;
+.container{
+  display: grid;
+  grid-template: 1.5fr 1fr/ 1fr;
+  background-color: rgb(0, 0, 0);
+  border-radius: 25px;
+  width: 13.125rem;
+  height: 14.375rem;
+}
+
+.text{
+  background-color: white;
+  border: 3px solid rgb(6, 248, 87);
+  color: black;
+  border-radius: 25px;
+  padding: 10px 20px;
+  grid-row: 2 / 3;
 }
