--- a/web/src/index.css
+++ b/web/src/index.css
@@ -8,3 +8,12 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+::-webkit-scrollbar{
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb{
+  background: white;
+  border-radius: 1.3rem
+}
