--- a/web/src/components/CourseCard/Coursecard.module.css
+++ b/web/src/components/CourseCard/Coursecard.module.css
@@ -1,17 +1,18 @@
 .container{
   display: grid;
   grid-template: 1.5fr 1fr/ 1fr;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(245, 106, 106);
   border-radius: 25px;
+  border: 2px solid black;
   width: 13.125rem;
   height: 14.375rem;
 }
 
 .text{
   background-color: white;
-  border: 3px solid rgb(6, 248, 87);
+  border: 2px solid rgb(0, 0, 0);
   color: black;
-  border-radius: 25px;
-  padding: 10px 20px;
+  border-radius: 24px;
+  padding: 10px 15px;
   grid-row: 2 / 3;
 }
