--- a/web/src/pages/CoursePage/Course.module.css
+++ b/web/src/pages/CoursePage/Course.module.css
@@ -1,4 +1,13 @@
-.glass-layer-course{
+.bg_container{
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(47, 50, 90);
+}
+
+.glass_layer_course{
   display: grid;
   position: absolute;
   grid-template-columns: 1fr 1fr;
@@ -27,7 +36,14 @@
   z-index: 4;
 }
 
-.red-circle-course{
+.mask{
+  height: 85vh;
+  width: 92.5vw;
+  border-radius: 1.3rem;
+  overflow: hidden;
+}
+
+.red_circle_course{
   background: #EA4335;
   display: inline-block;
   position: relative;
@@ -38,7 +54,7 @@
   border-radius: 50%;
 }
 
-.yellow-circle-course{
+.yellow_circle_course{
   background: #FBBC05;
   display: inline-block;
   position: relative;
@@ -61,7 +77,7 @@
   font-weight: 500;
 }
 
-.user-tab{
+.userdropdown{
   display: grid;
   grid-template-columns: 9fr 1fr 1fr;
   grid-area: user;
@@ -69,7 +85,7 @@
   column-gap: 10px;
 }
 
-.user-name{
+.username{
   font-size: 1.45rem;
   font-weight: 500;
   justify-self: end;
@@ -80,7 +96,7 @@ span{
   font-weight: 500; 
 }
 
-.user-img{
+.user_img{
   background-color: aliceblue;
   justify-self: center;
   width: 3rem;
