--- a/web/src/pages/ChatPage/Chat.css
+++ b/web/src/pages/ChatPage/Chat.css
@@ -13,15 +13,16 @@
 
 .sidebar-top {
   grid-area: Sidebar-top;
-  width: 100%;
-  height: 100%;
+  width: auto;
+  height: auto;
   background-color: rgba(38, 41, 82, 1);
 }
 
 .sidebar-below {
   grid-area: Sidebar-below;
-  width: 100%;
-  height: 100%;
+  overflow: auto;
+  width: auto;
+  height: auto;
   background-color: rgba(94, 96, 132, 1);
 }
 
@@ -47,46 +48,62 @@
 }
 
 img[src="src/assets/Back Button.svg"] {
-  padding-top: 2rem;
+  padding-top: 1.5rem;
   padding-left: 2rem;
 }
 
 .macow-chat {
   display: flex;
-  justify-content: space-around;
+  /* background-color: #2f325a; */
+  justify-content: space-between;
+}
+
+.macow-chat p {
+  padding-left: 1.5rem;
   font-size: 2rem;
   font-weight: 500;
+  padding-left: 3rem;
+}
+
+img[src="src/assets/Collapse.svg"] {
+  padding-right: 1.75rem;
 }
 
 .new-chat {
   font-size: 1.3rem;
-  justify-content: safe;
-  margin-top: 4.375rem;
-  padding-left: 1.8125rem;
+  margin-top: 3rem;
+  padding-left: 1.64rem;
   display: flex;
+  background-color: #2f325a;
   align-items: center;
 }
 
 .new-chat p {
   color: #fff;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
 }
 
 img[src="src/assets/New button.svg"] {
-  padding-right: 1rem;
+  padding-right: 0.8rem;
 }
 
 .file-uploaded {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   margin-top: 6.875rem;
+  background-color: #2f325a;
+  padding-left: 1.64rem;
 }
 
 .file-uploaded p {
   color: #fff;
   font-size: 2rem;
   font-weight: 500;
+}
+
+img[src="src/assets/Upload.svg"] {
+  padding-right: 1.75rem;
 }
 
 .file-status {
@@ -96,15 +113,20 @@ img[src="src/assets/New button.svg"] {
   margin-top: 1rem;
 }
 
+.sidebar-below {
+  display: flex;
+  flex-direction: column;
+}
+
 .Header h3:first-child {
-  padding-top: 2.44rem;
+  /* margin-top: 1.44rem; */
   padding-left: 1.69rem;
   font-size: 2.5rem;
   font-weight: 600;
 }
 
 .Header h3:last-child {
-  padding-top: 0.44rem;
+  /* padding-top: 0.44rem; */
   padding-left: 2.51rem;
   font-size: 1.5rem;
   font-weight: 500;
@@ -113,14 +135,13 @@ img[src="src/assets/New button.svg"] {
 .assignment {
   letter-spacing: 0.0375rem;
   font-size: 1.5rem;
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
   padding-left: 2.51rem;
   color: rgba(208, 209, 216, 1);
 }
 
 .general {
   font-size: 1.5rem;
-  margin-top: 9rem;
   padding-left: 2.51rem;
   color: rgba(208, 209, 216, 1);
 }
