--- a/web/src/pages/LoginPage/Login.module.css
+++ b/web/src/pages/LoginPage/Login.module.css
@@ -43,7 +43,7 @@
   overflow: hidden;
 }
 
-.red-circle {
+.red_circle {
   background: #ea4335;
   display: inline-block;
   position: relative;
@@ -54,7 +54,7 @@
   border-radius: 50%;
 }
 
-.yellow-circle {
+.yellow_circle {
   background: #fbbc05;
   display: inline-block;
   position: relative;
@@ -67,14 +67,14 @@
 
 .logo {
   grid-area: Logo;
-  height: 100%;
-  width: 100%;
+  width: 6rem;
+  height: auto;
   display: flex;
   justify-content: start;
-  align-items: center;
+  /* align-items: center; */
 }
 
-.app-name {
+.app_name {
   grid-area: AppName;
   height: 100%;
   width: 100%;
@@ -94,7 +94,7 @@
   align-items: start;
 }
 
-.left-text {
+.left_text {
   background-image: linear-gradient(
     180deg,
     rgba(222, 222, 222, 1),
@@ -161,7 +161,7 @@
   padding-top: 1rem;
 }
 
-.accept-button {
+.accept_button {
   height: 24px;
   width: 24px;
   border-radius: 1.5rem;
@@ -170,10 +170,20 @@
   margin-left: 1rem;
 }
 
-@media only screen and (max-height: 830px) {
-  .left-text {
+@media only screen and (max-width: 1600px) {
+  .logo{
+    width: 4rem;
+  }
+
+  .app_name{
+    font-size: 3rem;
+  }
+
+  .left_text {
     font-size: 6rem;
   }
+
+  .content{
+    padding: 80px;
+  }
 }
-/* 
-hello */
