Fixed Chat & Terms of Service

--- a/web/src/pages/ChatPage/Chat.css
+++ b/web/src/pages/ChatPage/Chat.css
@@ -47,7 +47,7 @@
   background-color: rgba(80, 80, 80, 1);
 }
 
-img[src="src/assets/Back Button.svg"] {
+img[src="src/assets/Back_Button.svg"] {
   padding-top: 1.5rem;
   padding-left: 2rem;
 }
