--- a/web/src/components/CourseList/CourseList.module.css
+++ b/web/src/components/CourseList/CourseList.module.css
@@ -1,7 +1,7 @@
 .course_container{
   display: grid;
-  grid-template-columns: repeat(5,1fr);
-  justify-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));;
+  /* justify-items: center; */
   gap: 1rem;
   list-style: none;
   grid-area: main;
