--- a/web/src/pages/AdminPage/Admin.css
+++ b/web/src/pages/AdminPage/Admin.css
@@ -134,6 +134,12 @@
   font-weight: 400;
 }
 
+.navigation a {
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: rgba(201, 201, 201, 1);
+}
+
 .chat-page {
   display: flex;
   justify-content: end;
@@ -152,11 +158,14 @@
   display: grid;
   width: 100%;
   height: 100%;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: auto auto auto;
   grid-template-rows: auto auto auto auto;
   grid-template-areas: "profile feedback compentencies" "online feedback compentencies" "nav analytics compentencies" "nav analytics compentencies";
   padding: 3rem;
-  align-content: space-between;
+  column-gap: 1rem;
+  row-gap: 1rem;
+  justify-content: center;
+  align-content: stretch;
 }
 
 .profile-cover {
@@ -164,11 +173,12 @@
   display: flex;
   position: relative;
   align-items: baseline;
+  place-self: stretch center;
 }
 
 .profile {
   width: 20rem;
-  height: 20rem;
+  height: 100%;
   border-radius: 1rem;
   background: radial-gradient(
     150.6% 150.6% at 93.97% 6.19%,
@@ -229,8 +239,8 @@
 
 .user-online {
   grid-area: online;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+  /* margin-top: 1.5rem;
+  margin-bottom: 1.5rem; */
   width: 19.6875rem;
   height: 4.6875rem;
   border-radius: 1rem;
@@ -240,6 +250,7 @@
   align-items: center;
   justify-content: space-between;
   padding-left: 1.87rem;
+  place-self: center;
 }
 
 .user-online-title {
@@ -275,13 +286,14 @@
 .nav-app {
   display: flex;
   grid-area: nav;
+  place-self: stretch center;
   width: 19.6875rem;
-  height: 20.25rem;
+  height: 100%;
   flex-direction: column;
-  align-content: start;
-  justify-content: baseline;
-  padding: 1.5rem;
-  gap: 7.24581rem;
+  align-content: space-between;
+  justify-content: space-between;
+  padding: 1rem 0rem 1rem 0rem;
+  /* gap: 7.24581rem; */
   border-radius: 1rem;
   background: rgba(255, 255, 255, 0.3);
   box-shadow: 17px 20px 40px 0px rgba(0, 0, 0, 0.21);
@@ -291,8 +303,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
-  padding-left: 1rem;
+  justify-content: space-around;
+  padding-left: 2rem;
   padding-right: 1rem;
 }
 
@@ -300,4 +312,248 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  padding-right: 2rem;
+}
+
+.nav-app-macaw-text {
+  /* background-color: #1d1d1f; */
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.nav-app-macaw-text p:first-child {
+  font-size: 1.25rem;
+  font-weight: 500;
+  color: #fff;
+}
+
+.nav-app-macaw-text p:last-child {
+  text-align: start;
+  font-size: 0.875rem;
+  color: #3d3d4c;
+}
+
+.course-nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  padding-left: 2rem;
+  padding-right: 1rem;
+}
+
+.nav-app-Course-icon {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-right: 2rem;
+  /* padding-right: 2rem; */
+}
+
+.nav-app-Course-text {
+  /* background-color: #1d1d1f; */
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.nav-app-Course-text p:first-child {
+  font-size: 1.25rem;
+  font-weight: 500;
+  color: #fff;
+}
+
+.nav-app-Course-text p:last-child {
+  font-size: 0.875rem;
+  color: #3d3d4c;
+}
+
+.Student-nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  padding-left: 2rem;
+  padding-right: 1rem;
+}
+
+.nav-app-Student-icon {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-right: 2rem;
+  /* padding-right: 2rem; */
+}
+
+.nav-app-Student-text {
+  /* background-color: #1d1d1f; */
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.nav-app-Student-text p:first-child {
+  font-size: 1.25rem;
+  font-weight: 500;
+  color: #fff;
+}
+
+.nav-app-Student-text p:last-child {
+  font-size: 0.875rem;
+  color: #3d3d4c;
+}
+
+.horizontal-line {
+  width: 100%;
+  height: 0.0625rem;
+  background: hsl(248, 9%, 31%);
+}
+
+.feedback-dash {
+  grid-area: feedback;
+  display: flex;
+  width: 19.6875rem;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 1rem;
+  background: rgba(255, 255, 255, 0.5);
+  box-shadow: 17px 20px 40px 0px rgba(0, 0, 0, 0.21);
+  place-self: stretch center;
+}
+
+.feedback-dash-bar {
+  display: flex;
+  height: 5rem;
+  width: 100%;
+  padding: 0.48938rem 0rem 0.49rem 0.9375rem;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 1rem 1rem 0rem 0rem;
+  background: white;
+}
+
+.feedback-text p {
+  color: #1d1d1f;
+}
+
+.feedback-text p:first-child {
+  font-weight: 600;
+  font-size: 1rem;
+}
+
+.feedback-text p:last-child {
+  font-size: 1rem;
+}
+
+.analytics-dash {
+  grid-area: analytics;
+  display: flex;
+  width: 19.6875rem;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 1rem;
+  background: rgba(255, 255, 255, 0.5);
+  box-shadow: 17px 20px 40px 0px rgba(0, 0, 0, 0.21);
+  place-self: stretch center;
+}
+
+.analytics-dash-bar {
+  display: flex;
+  height: 5rem;
+  width: 100%;
+  padding: 0.48938rem 0rem 0.49rem 0.9375rem;
+  justify-content: start;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 1rem 1rem 0rem 0rem;
+  background: white;
+}
+
+.analytics-dash-bar img {
+  padding-left: 1rem;
+}
+
+.analytics-text p {
+  padding-left: 1rem;
+}
+
+.analytics-text p:first-child {
+  color: #1d1d1f;
+  font-weight: 600;
+  font-size: 1rem;
+  padding-left: 1;
+}
+
+.analytics-text p:last-child {
+  color: #1d1d1f;
+  font-size: 1rem;
+}
+
+.competencies-rank {
+  grid-area: compentencies;
+  place-self: stretch center;
+  width: 100%;
+  height: 100%;
+  flex-shrink: 0;
+  border-radius: 1rem 1rem 1rem 1rem;
+  background: rgba(255, 255, 255, 0.5);
+  box-shadow: 17px 20px 40px 0px rgba(0, 0, 0, 0.21);
+}
+
+.competencies-rank-bar {
+  display: flex;
+  height: 5rem;
+  width: 100%;
+  padding: 0.48938rem 0rem 0.49rem 0.9375rem;
+  justify-content: space-between;
+  flex-shrink: 0;
+  border-radius: 1rem 1rem 0rem 0rem;
+  background: white;
+}
+
+.competencies-rank-title-left {
+  display: flex;
+  padding-left: 1rem;
+  align-items: center;
+}
+
+.competencies-rank-left-text {
+  display: flex;
+  flex-direction: column;
+  padding-left: 1rem;
+}
+
+.competencies-rank-left-text p:first-child {
+  color: #1d1d1f;
+  font-weight: 600;
+  font-size: 1rem;
+  padding-left: 1;
+}
+
+.competencies-rank-left-text p:last-child {
+  color: #1d1d1f;
+  font-size: 1rem;
+}
+
+.competencies-rank-title-right {
+  display: flex;
+  flex-direction: row;
+  padding-right: 1rem;
+  justify-content: center;
+  align-items: center;
+  /* background-color: #1d1d1f; */
+}
+
+.competencies-rank-right-text p {
+  display: flex;
+  padding-right: 1rem;
+  padding-left: 10rem;
+  color: #1d1d1f;
 }
