--- a/web/src/components/Sidebar/LongSidebar.module.css
+++ b/web/src/components/Sidebar/LongSidebar.module.css
@@ -109,11 +109,12 @@ img[src="src/assets/Upload.svg"] {
   /* grid-template-columns: 1fr; */
 
   max-height: 100%;
+  padding: 1.5rem;
   overflow-y: scroll;
 }
 
 .file_status > * {
-  margin: 1rem;
+  /* margin-top: .5rem; */
 }
 
 .file_status::-webkit-scrollbar {
