--- a/web/src/pages/ChatPage/Chat.module.css
+++ b/web/src/pages/ChatPage/Chat.module.css
@@ -19,9 +19,8 @@
 
 .ide {
   grid-area: IDE;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(28, 35, 50, 1);
+  color: black;
+  /* background-color: rgba(28, 35, 50, 1); */
 }
 
 .output {
