--- a/web/src/components/PillarList/PillarList.module.css
+++ b/web/src/components/PillarList/PillarList.module.css
@@ -31,6 +31,18 @@
   }
 }
 
+.pillar_container:focus {
+  background-color: rgba(118, 115, 131, 0.6);
+  padding: auto;
+  border-radius: 5rem;
+  background-color: rgba(118, 115, 131, 0.6);
+  transition: all 0.4s ease-in-out;
+
+  .pillar_name p {
+    color: aquamarine;
+  }
+}
+
 .pillar_container:hover::after {
   opacity: 1;
 }
