--- a/web/src/components/CourseSlideUp/CourseSlideUp.module.css
+++ b/web/src/components/CourseSlideUp/CourseSlideUp.module.css
@@ -5,7 +5,7 @@
   grid-template-areas:
     "Cou CouNav"
     "Sub Sub"
-    "TAss AssNav"
+    "AssNav AssNav"
     "Ass Ass"
     "Line Line"
     "Gen Gen";
@@ -15,13 +15,26 @@
   padding: 1rem;
   padding-top: 1.2rem;
   align-items: center;
+
+  
   /* height: 5rem; */
 }
 
-.sidebar_below img {
+.assDropDown {
+  /* all: unset; */
+
   max-width: 2rem;
-  justify-self: end;
+  justify-self: center;
   align-self: center;
+}
+
+.assignmentNav {
+  grid-area: AssNav;
+  display: grid;
+  grid-template-columns: 5fr 1fr;
+  align-items: center;
+  /* background-color: red; */
+  border-radius: .5rem;
 }
 
 .sidebar_below h2 {
@@ -34,6 +47,10 @@
   grid-area: Sub;
   margin-left: 1rem;
   font-size: 1.2rem;
+}
+
+.sidebar_below img {
+  justify-self: center;
 }
 
 .line {
@@ -53,9 +70,25 @@
 .general {
   font-size: 1.2rem;
   padding: 1rem;
-  color: white;
-  background-color: #6d6f99;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+  color: #d0d1d8;
+  /* padding-top: .5rem;
+  padding-bottom: .5rem;
+  color: white; */
+  /* background-color: #6d6f99; */
   border-radius: 0.5rem;
   width: 100%;
   grid-area: Gen;
+}
+
+.selected {
+  color: white;
+  background-color: #6d6f99;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+}
+
+.selected > * {
+  color: white;
 }
