--- a/web/src/components/Sidebar/LongSidebar.module.css
+++ b/web/src/components/Sidebar/LongSidebar.module.css
@@ -15,21 +15,22 @@
 }
 
 /* Return back to COURSE page button */
-img[src="src/assets/Back_Button.svg"] {
+/* img[src="src/assets/Back_Button.svg"] {
   margin-left: -1rem;
-}
+} */
 
 /* INCLUDES Back to course page button and search bar */
 .top {
   display: grid;
-  grid-template-columns: 3fr 1fr;
-  grid-template-rows: 2fr auto auto;
+  grid-template-columns: 1fr 6fr 1fr;
+  /* grid-template-rows: 2fr auto auto; */
   grid-template-areas:
     "backBtn textArea collapseBtn"
     "sepline sepline sepline";
   align-items: center;
   margin: 2rem;
-  margin-left: 2rem;
+  /* margin-left: 2rem; */
+  margin-bottom: 1rem;
   height: fit-content;
   gap: 0.3rem;
 }
@@ -44,6 +45,19 @@ img[src="src/assets/Collapse.svg"] {
   grid-area: collapseBtn;
   width: 2.5rem;
   justify-self: end;
+}
+
+.sepLine {
+  all: unset;
+
+  grid-area: sepline;
+  height: 0.01rem;
+  /* z-index: 10; */
+  width: 110%;
+  margin-top: .5rem;
+  justify-self: center;
+
+  background-color: rgba(255, 255, 255, 0.6);
 }
 
 /* For New Chat Part */
@@ -84,6 +98,6 @@ img[src="src/assets/Collapse.svg"] {
 }
 
 /* Upload file icon */
-img[src="src/assets/Upload.svg"] {
+img[src="/src/assets/Upload.svg"] {
   padding-right: 1.75rem;
 }
