--- a/web/src/pages/ChatPage/ChatPage.module.css
+++ b/web/src/pages/ChatPage/ChatPage.module.css
@@ -7,14 +7,16 @@
     "Sidebar IDE Output";
   height: 100vh;
   width: 100vw;
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
 }
 
 .chat {
   grid-area: Chatzone;
   width: 100%;
   height: 100%;
-  background-color: white;
+  /* background-color: white; */
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .ide_container{
