--- a/web/src/components/PillarList/PillarList.module.css
+++ b/web/src/components/PillarList/PillarList.module.css
@@ -97,21 +97,24 @@
   flex-direction: column;
   width: auto;
   height: auto;
-
-  /* background-color: white; */
-  padding: 1rem;
+  padding-top: 1.5rem;
+  padding-left: 2rem;
   overflow: auto;
 }
 
-.pillar_course_name {
+.pillar_content {
   font-size: 1.5rem;
-  padding-top: 0.5rem;
-  padding-left: 1.5rem;
   font-weight: 500;
-  align-self: center;
-
-  justify-items: center;
-
   color: white;
   margin-bottom: 0.5rem;
+}
+
+.pillar_course {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+  padding-top: 1.5rem;
+  padding-left: 2rem;
+  overflow: auto;
 }
