--- a/web/src/components/PillarCourseCard/PillarCourseCard.module.css
+++ b/web/src/components/PillarCourseCard/PillarCourseCard.module.css
@@ -1,21 +1,44 @@
 .container_course {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  justify-items: center;
-  grid-gap: 1rem;
-  list-style: none;
-  grid-area: main;
-  overflow-y: auto;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  grid-template-columns: repeat(5, auto);
+  /* background-color: rgb(245, 106, 106); */
+  height: 100%;
+  width: 100%;
+  grid-template-rows: auto auto;
+  gap: 2rem;
+  padding: 2rem;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border-radius: 25px;
+  /* border: 2px solid black; */
+  width: 12rem;
+  height: 14.375rem;
+  align-self: self-end;
+  justify-content: end;
 }
 
 .text {
-  display: grid;
-  grid-template: 1.5fr 1fr/ 1fr;
-  background-color: rgb(245, 106, 106);
-  border-radius: 25px;
-  border: 2px solid black;
-  width: 13.125rem;
-  height: 14.375rem;
+  display: flex;
+  flex-direction: column;
+  background-color: #1a202d;
+  border-radius: 0px 0px 25px 25px;
+  /* border: 2px solid black; */
+  height: 100%;
+  width: 100%;
+  align-self: self-end;
+  justify-content: space-between;
+}
+
+.sub_text {
+  padding: 1rem;
+}
+
+.photo_cover {
+  width: 100%;
+  height: 100%;
+  border-radius: 25px 25px 0px 0px;
 }
