--- a/web/src/components/ChatUI/ChatUI.module.css
+++ b/web/src/components/ChatUI/ChatUI.module.css
@@ -1,12 +1,19 @@
 /* BACKDROP CSS */
+/* .backdrops {
+  display: block;
+  width: 100%;
+  height: 100%;
+} */
+
 .backdrop {
   /* chatzone main bg */
 
   box-sizing: border-box;
   background: #262952;
 
-  /* width: 50%;
-  height: auto;
+  width: 100%;
+  height: 100%; 
+  /*
   margin-bottom: auto; */
   /* box-shadow: inset 2px 1px 1px rgba(0, 0, 0, 0.25); */
   margin: 0px auto;
@@ -57,8 +64,8 @@
   position: absolute;
   z-index: -1;
 
-  /* width: 100%;
-  height: 100%; */
+  width: 100%;
+  height: 100%;
 }
 
 /* HEADER */
