--- a/web/src/components/ChatScreen/ChatScreen.module.css
+++ b/web/src/components/ChatScreen/ChatScreen.module.css
@@ -2,6 +2,7 @@
     padding: 2rem;
     padding-right: 4rem;
     padding-top: 0;
+    /* margin-bottom: 1rem; */
 
     max-width: 100%;
     height: 70%;
