--- a/web/src/components/ChatUI/ChatUI.module.css
+++ b/web/src/components/ChatUI/ChatUI.module.css
@@ -1,9 +1,11 @@
 /* BACKDROP CSS */
-/* .backdrops {
-  display: block;
+.backdrops {
+  /* display: block; */
+  /* display: flex; */
   width: 100%;
   height: 100%;
-} */
+  position: relative;
+}
 
 .backdrop {
   /* chatzone main bg */
@@ -19,6 +21,7 @@
   margin: 0px auto;
 
   position: absolute;
+  top: 0;
   z-index: -2;
   overflow: hidden;
   /* overflow-x: hidden; */
@@ -29,6 +32,8 @@
   height: auto; */
   width: 100%;
   height: 100%;
+  display: flex;
+  position: relative;
 }
 
 .redCircle {
@@ -104,6 +109,14 @@
   margin-top: .5rem;
 }
 
-.chatting {
-  
+.content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 5;
+}
+
+.temp {
+  /* position: absolute;
+  width: auto; */
 }
