--- a/web/src/components/ChattingCard/ChattingCardAI.module.css
+++ b/web/src/components/ChattingCard/ChattingCardAI.module.css
@@ -34,6 +34,25 @@
   bottom: -35%;
 }
 
+.preferenceSelected {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: #d9d9d9;
+
+  border-radius: 1.875rem;
+
+  position: absolute;
+  right: 0;
+  bottom: -35%;
+}
+
 .like {
   margin-right: .5rem;
+}
+
+.likeFilled {
+  max-width: 2.5rem;
+  margin: 0;
 }
