--- a/web/src/components/ChattingCard/ChattingCardAI.module.css
+++ b/web/src/components/ChattingCard/ChattingCardAI.module.css
@@ -63,6 +63,10 @@
   flex-wrap: wrap;
 }
 
-/* .assignmentList p {
+.assignmentList p {
   text-decoration: underline;
-} */
+}
+
+.assignmentList p:hover {
+  cursor: pointer;
+}
