--- a/web/src/components/ChatInputField/ChatInputField.module.css
+++ b/web/src/components/ChatInputField/ChatInputField.module.css
@@ -25,6 +25,18 @@
 
   width: 2.5rem;
   height: 2.5rem;
+
+  position: relative;
+}
+
+.attachment label {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.attachment label input {
+  display: none;
 }
 
 .attachment img {
