--- a/web/src/components/ChatUI/ChatUI.module.css
+++ b/web/src/components/ChatUI/ChatUI.module.css
@@ -87,6 +87,9 @@
   grid-template-columns: 1fr 15fr 1fr 1fr;
   grid-template-areas: ". . . ." "line line line line";
   align-items: center;
+
+  z-index: 100;
+  position: relative;
 }
 
 .header p {
