--- a/web/src/components/ChatInputField/ChatInputField.module.css
+++ b/web/src/components/ChatInputField/ChatInputField.module.css
@@ -1,11 +1,15 @@
 .wrapper {
   display: grid;
   grid-template-columns: 1fr 10fr;
-  width: 80%;
-  margin-left: 10%;
+  width: 100%;
+  /* margin-left: 10%;
+  margin-right: 10%; */
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-bottom: 1%;
 
   position: absolute;
-  bottom: 1rem;
+  bottom: 0;
   z-index: 100;
   /* justify-content: center;
     align-items: center; */
@@ -59,7 +63,7 @@
 }
 
 .locked {
-  background: rgba(217, 217, 217, 0.30);
+  background: rgba(217, 217, 217, 0.3);
   box-shadow: 2px 1px 6px 0px rgba(0, 0, 0, 0.25) inset;
 }
 
@@ -73,4 +77,21 @@
 .send {
   margin-left: auto;
   margin-right: 1rem;
+}
+
+.bottomBlur {
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 110%;
+  left: 0;
+  bottom: 0;
+  /* bottom: 0; */
+  /* background-color: red; */
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.5) 100%
+  );
+  backdrop-filter: blur(2px);
 }
