--- a/web/src/components/ChatScreen/ChatScreenInitialized.module.css
+++ b/web/src/components/ChatScreen/ChatScreenInitialized.module.css
@@ -2,7 +2,7 @@
   padding: 2rem;
   padding-right: 4rem;
   padding-top: 7%;
-  padding-bottom: 0;
+  padding-bottom: 8%;
   /* margin-bottom: 1rem; */
 
   /* margin-top: auto; */
