--- a/web/src/components/ChatUI/ChatUI.module.css
+++ b/web/src/components/ChatUI/ChatUI.module.css
@@ -125,3 +125,15 @@
   /* position: absolute;
   width: auto; */
 }
+
+.topBlur {
+  position: absolute;
+  z-index: -1;
+  /* width: 100%;
+  height: 18%; */
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+  backdrop-filter: blur(2px);
+}
