--- a/web/src/pages/LoginPage/Login.module.css
+++ b/web/src/pages/LoginPage/Login.module.css
@@ -36,14 +36,14 @@
   overflow: hidden;
 }
 
-.mask-A {
+.mask {
   height: 85vh;
   width: 92.5vw;
   border-radius: 1.3rem;
   overflow: hidden;
 }
 
-.red-circle-A {
+.red_circle {
   background: #ea4335;
   display: inline-block;
   position: relative;
@@ -54,7 +54,7 @@
   border-radius: 50%;
 }
 
-.yellow-circle-A {
+.yellow_circle {
   background: #fbbc05;
   display: inline-block;
   position: relative;
@@ -119,6 +119,20 @@
   width: auto;
 }
 
+.warning p {
+  color: rgb(255, 138, 138);
+}
+
+.warning span {
+  text-decoration: underline;
+  font-size: 1rem;
+  color: white;
+}
+
+.warning span:hover {
+  cursor: pointer;
+}
+
 .api {
   display: flex;
   position: relative;
@@ -140,6 +154,10 @@
   border-style: solid;
   border-color: transparent;
   border-radius: 1.3rem;
+}
+
+.api:hover {
+  cursor: pointer;
 }
 
 .api p {
@@ -168,6 +186,15 @@
   border-style: solid;
   border-color: #c0c0c0;
   margin-left: 1rem;
+}
+
+.agree_term a {
+  text-decoration: underline;
+  color: #C0C0C0;
+}
+
+.agree_term a:hover {
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 1600px) {
