--- a/web/src/pages/TermPage/Term.css
+++ b/web/src/pages/TermPage/Term.css
@@ -6,6 +6,38 @@
   justify-content: center;
   align-items: center;
   background-color: rgba(47, 50, 90);
+
+  transition: all 0.3s ease-out;
+}
+
+@keyframes mOpen {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes mClose {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.modalOpen {
+  /* transition: all 0.3s ease-out;
+  opacity: 1; */
+  animation: mOpen 300ms ease-out forwards;
+}
+
+.modalClose {
+  /* transition: all 0.3s ease-out;
+  opacity: 0; */
+  animation: mClose 300ms ease-out forwards;
 }
 
 .backdrop {
@@ -24,6 +56,46 @@
   position: absolute;
   top: 70px;
   right: 70px;
+
+  display: flex;
+}
+
+.close-btn p {
+  text-align: end;
+}
+
+.agree-btn {
+  width: fit-content;
+  /* height: 100%; */
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: relative;
+
+  margin-left: 1rem;
+}
+
+.unclicked {
+  width: 2rem;
+  height: 2rem;
+
+  border-style: solid;
+  border-radius: 50%;
+  border-color: white;
+  border-width: .1rem;
+
+  /* background-color: aqua; */
+}
+
+.clicked {
+  width: 1.5rem;
+  height: 1.5rem;
+  position: absolute;
+
+  background-color: #C0C0C0;
+  border-radius: 50%;
 }
 
 .glass-layer {
@@ -43,6 +115,8 @@
   border-radius: 1.3rem;
   z-index: 4;
   opacity: 0.9;
+
+  transition: all 300ms ease-out;
 }
 
 .top-bar {
