--- a/web/src/components/ChatScreen/ChatScreenNotInit.module.css
+++ b/web/src/components/ChatScreen/ChatScreenNotInit.module.css
@@ -2,6 +2,7 @@
     padding: 2rem;
     padding-right: 4rem;
     padding-top: 0;
+    padding-bottom: 7rem;
     /* margin-bottom: 1rem; */
 
     max-width: 100%;
