--- a/web/src/components/AssignmentCard/AssignmentCard.module.css
+++ b/web/src/components/AssignmentCard/AssignmentCard.module.css
@@ -6,6 +6,7 @@
     padding: .5rem;
     background-color: #565879;
     border-radius: 0.5rem;
+    transition: all 300ms ease-out;
 }
 
 .wrapper p {
