--- a/web/src/components/IDE/IDE.module.css
+++ b/web/src/components/IDE/IDE.module.css
@@ -1,103 +1,146 @@
 .bg_container {
-    display: grid;
-    grid-template-columns: 0.55fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas:
-      "Sidebar LeftSide LeftSide"
-      "Sidebar LeftSide LeftSide";
-    height: 100vh;
-    width: 100vw;
-  
-    overflow: hidden;
-    /* background-color: #ffffff; */
-  }
-  
-  .leftSide {
-    display: flex;
-    grid-area: LeftSide;
-    flex-direction: column;
-  }
-  
-  .sidin {
-    grid-area: slide;
-    background-color: grey;
-  
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
-    /* height: fit-content; */
-  }
-  
-  .big_ide_container {
-    grid-area: IDE;
-  
-    display: grid;
-    grid-template-areas: 
+  display: grid;
+  grid-template-columns: 0.55fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas:
+    "Sidebar LeftSide LeftSide"
+    "Sidebar LeftSide LeftSide";
+  height: 100vh;
+  width: 100vw;
+
+  overflow: hidden;
+  /* background-color: #ffffff; */
+}
+
+.leftSide {
+  display: flex;
+  grid-area: LeftSide;
+  flex-direction: column;
+}
+
+.sidin {
+  grid-area: slide;
+  background-color: grey;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  /* height: fit-content; */
+}
+
+.big_ide_container {
+  grid-area: IDE;
+
+  display: grid;
+  grid-template-areas:
     "slide slide"
-    "Editor Output";
-    grid-template-rows: 25px 1fr;
-  
-    position: relative;
-    bottom: 0;
-    /* grid-template-columns: 1fr 1fr; */
-  }
-  
-  .chat {
-    grid-area: Chatzone;
-    width: 100%;
-    height: 100%;
-    /* background-color: white; */
-    overflow-x: hidden;
-    overflow-y: hidden;
-  
-    flex: 1;
-  }
-  
-  .ide_container {
-    grid-area: Editor;
-    background-color: rgb(21, 95, 255);
-    width: 100%;
-    height: 100%;
-  
-    /* resize: both; */
-  }
-  
-  .lang_selection {
-    color: black;
-  }
-  .lang_selection option {
-    color: black;
-  }
-  
-  .run_btn {
-    background-color: white;
-    padding: 0 1rem;
-    border-radius: 1rem;
-  }
-  
-  .ide_topbar {
-    display: flex;
-    padding: 0.5%;
-    justify-content: space-between;
-  }
-  
-  .ide * {
-    font-size: 14px;
-  }
-  
-  .output {
-    grid-area: Output;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(80, 80, 80, 1);
-  }
-  
-  .close {
-    grid-template-columns: 0.1fr 1fr 1fr;
-  }
-  
-  .open {
-    grid-template-columns: 0.55fr 1fr 1fr;
-  }
-  
+    "Editor Editor";
+  grid-template-rows: 10px 1fr;
+
+  position: relative;
+  bottom: 0;
+
+  overflow: hidden;
+
+  touch-action: none;
+
+  /* This makes things *much* easier */
+  box-sizing: border-box;
+
+  width: 100% !important;
+  /* grid-template-columns: 1fr 1fr; */
+}
+
+.ide_output {
+  grid-area: Editor;
+  display: flex;
+  /* width: 50%; */
+}
+
+.ide_output:last-child {
+  flex: 1;
+}
+
+.verticalSlide {
+  /* flex: 1 !important; */
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  width: 10px;
+  height: 100%;
+  background-color: gray;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.chat {
+  grid-area: Chatzone;
+  width: 100%;
+  height: 100%;
+  /* background-color: white; */
+  overflow-x: hidden;
+  overflow-y: hidden;
+
+  flex: 1;
+}
+
+.ide_container {
+  /* grid-area: Editor; */
+  background-color: rgb(21, 95, 255);
+  width: 60%;
+  height: 100% !important;
+
+  display: flex;
+  flex-direction: column;
+
+  position: relative;
+  padding-right: 10px;
+
+  overflow: hidden;
+
+  /* resize: both; */
+}
+
+.lang_selection {
+  color: black;
+}
+.lang_selection option {
+  color: black;
+}
+
+.run_btn {
+  background-color: white;
+  padding: 0 1rem;
+  border-radius: 1rem;
+}
+
+.ide_topbar {
+  display: flex;
+  padding: 0.5%;
+  justify-content: space-between;
+}
+
+.ide * {
+  font-size: 14px;
+}
+
+.output {
+  /* grid-area: Output; */
+  width: 100%;
+  height: 100%;
+
+  flex: 1;
+  background-color: rgba(80, 80, 80, 1);
+}
+
+.close {
+  grid-template-columns: 0.1fr 1fr 1fr;
+}
+
+.open {
+  grid-template-columns: 0.55fr 1fr 1fr;
+}
