--- a/web/src/components/AssignmentCard/AssignmentCard.module.css
+++ b/web/src/components/AssignmentCard/AssignmentCard.module.css
@@ -9,6 +9,12 @@
     transition: all 300ms ease-out;
 }
 
+.wrapper:hover {
+    cursor: pointer;
+    background-color: #484964;
+    box-shadow: .1px .1px 1px rgb(0, 0, 0) inset;
+}
+
 .wrapper p {
     margin-left: .5rem;
 }
@@ -17,5 +23,5 @@
     background-color: #484964;
     /* border-radius: 10px;
     border-color: black; */
-    box-shadow: 1px 1px 5px black inset;
+    box-shadow: 1px 1px 5px black inset !important;
 }
