--- a/web/src/components/AssignmentList/AssignmentList.module.css
+++ b/web/src/components/AssignmentList/AssignmentList.module.css
@@ -12,6 +12,38 @@
   overflow-y: scroll;
 }
 
+@keyframes openAss {
+  0% {
+    height: 0;
+    overflow: hidden;
+  }
+  100% {
+    height: 12rem;
+  }
+}
+
+@keyframes closeAss {
+  0% {
+    height: 12rem;
+    /* transform: translateY(0); */
+    /* overflow: hidden; */
+    /* position: relative; */
+  }
+  100% {
+    height: 0;
+    /* transform: translateY(12rem); */
+  }
+}
+
+.open {
+  animation: openAss 200ms ease-out forwards;
+}
+
+.close {
+  /* height: 1rem; */
+  animation: closeAss 200ms ease-out forwards;
+}
+
 .assignments::-webkit-scrollbar {
   width: 5px;
 }
