--- a/web/src/components/Sidebar/LongSidebar.module.css
+++ b/web/src/components/Sidebar/LongSidebar.module.css
@@ -104,10 +104,12 @@ img[src="/src/assets/Upload.svg"] {
 
 @keyframes openSideBar {
   0% {
-    transform: translateX(-100);
+    /* transform: translateX(-10rem); */
+    width: 95%;
   }
   100% {
-    transform: translateX(0);
+    /* transform: translateX(1rem); */
+    width: 100%;
   }
 }
 
@@ -125,7 +127,11 @@ img[src="/src/assets/Upload.svg"] {
 }
 
 .open {
-  animation: openSideBar 300ms linear forwards;
+  /* animation: openSideBar 200ms linear forwards; */
+
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .close {
