--- a/web/src/components/CourseSlideUp/CourseSlideUp.module.css
+++ b/web/src/components/CourseSlideUp/CourseSlideUp.module.css
@@ -1,57 +1,50 @@
 .sidebar_below {
-  transition: 300ms;
+  /* transition: 300ms; */
   background-color: #5e6084;
 
   padding: 1rem;
   padding-top: 1.2rem;
   align-items: center;
 
-  height: fit-content;
-
-  /* transition: all 300ms ease-out; */
-  
-  /* height: 5rem; */
+  height: max-content;
 }
 
 .latterHalf > *:not(:first-child) {
   margin-top: .5rem;
 }
 
-@keyframes LHfOpen {
+@keyframes slideUp {
   0% {
-    /* width: 100%;
-    overflow: hidden;
-    height: 1rem; */
-    transform: translateY(0rem);
+    /* height: 0%;
+    overflow: hidden; */
+    transform: translateY(5rem);
   }
   100% {
-    /* width: 100%;
-    height: 3rem; */
-    transform: translateY(3rem);
+    /* height: 100%; */
+    transform: translateY(0);
   }
 }
 
-@keyframes LHClose {
+@keyframes slideDown {
   0% {
-    width: 100%;
-    overflow: hidden;
-    height: 100%;
+    /* width: 100%; */
+    /* overflow: hidden;
+    height: 100%; */
+    transform: translateY(0);
   }
   100% {
-    width: 100%;
-    height: 1%;
+    /* width: 100%; */
+    /* height: 0%; */
+    transform: translateY(15rem);
   }
 }
 
 .latterHalfOpen {
-  animation: LHOpen 300ms ease-out forwards;
-  /* transform: translateY(-3rem); */
-  /* transition: 300ms;
-  transform: translateY(3rem); */
+  animation: slideUp 300ms linear forwards;
 }
 
 .latterHalfClose {
-  animation: LHClose 300ms ease-out forwards;
+  animation: slideDown 300ms linear forwards;
 }
 
 .sidebar_below > *:not(:first-child) {
@@ -66,7 +59,7 @@
 .allVis img {
   /* justify-self: flex-end; */
   align-self: end;
-  margin-left: auto !important; 
+  margin-left: auto; 
 }
 
 .allVis:first-child {
