Optimize code for performance (Chat UI Page)

--- a/web/src/components/ChatUI/ChatUI.module.css
+++ b/web/src/components/ChatUI/ChatUI.module.css
@@ -47,7 +47,7 @@
   /* border: 10px 10px 10px red; */
 
   position: absolute;
-  top: -80%;
+  top: -30rem;
   right: -30%;
 }
 
@@ -60,7 +60,7 @@
   /* border: 10px 10px 10px red; */
 
   position: absolute;
-  bottom: -70%;
+  bottom: -20rem;
   left: -10%;
 }
 
