--- a/web/src/components/ChatInputField/ChatInputField.module.css
+++ b/web/src/components/ChatInputField/ChatInputField.module.css
@@ -40,6 +40,10 @@
   height: 100%;
 }
 
+.attachment label:hover {
+  cursor: pointer;
+}
+
 .attachment label input {
   display: none;
 }
@@ -77,6 +81,10 @@
 .send {
   margin-left: auto;
   margin-right: 1rem;
+}
+
+.send {
+  cursor: pointer;
 }
 
 .bottomBlur {
