--- a/web/src/components/CourseSlideUp/CourseSlideUp.module.css
+++ b/web/src/components/CourseSlideUp/CourseSlideUp.module.css
@@ -7,6 +7,8 @@
   align-items: center;
 
   height: max-content;
+
+  /* overflow: hidden; */
 }
 
 .latterHalf > *:not(:first-child) {
@@ -17,33 +19,34 @@
   0% {
     /* height: 0%;
     overflow: hidden; */
-    transform: translateY(5rem);
+    /* transform: translateY(5rem); */
+    height: 0%;
   }
   100% {
     /* height: 100%; */
-    transform: translateY(0);
+    /* transform: translateY(0); */
+    height: 100%;
   }
 }
 
 @keyframes slideDown {
   0% {
-    /* width: 100%; */
-    /* overflow: hidden;
-    height: 100%; */
-    transform: translateY(0);
+    height: 100%;
   }
   100% {
-    /* width: 100%; */
-    /* height: 0%; */
-    transform: translateY(15rem);
+    height: 0%;
   }
 }
 
 .latterHalfOpen {
+  height: 0%;
+  overflow: hidden;
   animation: slideUp 300ms linear forwards;
+  height: 100%;
 }
 
 .latterHalfClose {
+  overflow: hidden;
   animation: slideDown 300ms linear forwards;
 }
 
