--- a/web/src/pages/ChatPage/ChatPage.module.css
+++ b/web/src/pages/ChatPage/ChatPage.module.css
@@ -13,7 +13,7 @@
   /* background-color: #ffffff; */
 }
 
-.leftSide {
+.right_side {
   display: flex;
   grid-area: LeftSide;
   flex-direction: column;
