--- a/web/src/components/ChattingCard/ChattingCardAI.module.css
+++ b/web/src/components/ChattingCard/ChattingCardAI.module.css
@@ -47,6 +47,10 @@
   font-size: 1rem !important;
 }
 
+code > * {
+  font-size: 1rem;
+}
+
 .preference {
   display: flex;
   justify-content: center;
